# auto-apply

./: Cargo.toml
src/: main.rs  old_main.rs
src/src/: main.rs
