[package]
name = "auto-apply"
version = "0.1.0"
edition = "2024"

[dependencies]
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
reqwest = { version = "0.12.18", features = ["blocking"] }
scraper = "0.23.1"
tokio = { version = "1.45.1", features = ["full"] }
undetected-chromedriver = "0.1.2"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
fantoccini = "0.21.5"
