[package]
name = "auto-apply"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
fantoccini = "0.21.5"
thirtyfour = "0.31.0"
undetected-chromedriver = {git = "https://github.com/Ulyssedev/Rust-undetected-chromedriver.git"}
serde_json = "1.0.140"


